--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,23 +16,17 @@ jobs:
           # use key string with "v1" for simple cache invalidation
           # use precise key to avoid cache "snowballing"
           # https://glebbahmutov.com/blog/do-not-let-cypress-cache-snowball/
-          key: dependencies-v1-${{ runner.os }}-${{ hashFiles('**/package-lock.lock') }}
+          key: dependencies-v1-${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install dependencies 📦
         run: npm ci
-
-      - name: Show Cypress info ℹ️
-        run: npx cypress info
-
-      - name: Verify Cypress can run 🏃‍♂️
-        run: npx cypress verify
 
       - name: Build the app 🏗
         run: npm run build
 
       - name: Start the app 📤
         run: npm start &
-      
+
       - name: Wait for URL ⏰
         run: npx wait-on http://localhost:8080
 
