--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,9 @@ jobs:
         run: npx wait-on http://localhost:8080
 
       - name: Run Cypress tests 🧪
-        run: npm run cy:run
+        run: npm run cy:run --record
+        env:
+            CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
 
       - name: Upload any screenshots and videos 📼
         uses: actions/upload-artifact@v2
