--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,6 @@ jobs:
         run: npx wait-on http://localhost:8080
 
       - name: Run Cypress tests 🧪
-        run: npm run cy:run --record
+        run: npm run cy:run --record --browser chrome
         env:
             CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
